@@ -4,7 +4,7 @@ import com.ordwen.odailyquests.ODailyQuests;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.util.Scanner;
 import java.util.function.Consumer;
 
@@ -18,7 +18,7 @@ public class UpdateChecker {
 
     public void getVersion(final Consumer<String> consumer) {
         ODailyQuests.morePaperLib.scheduling().asyncScheduler().run(() -> {
-            try (InputStream inputStream = new URL("https://api.spigotmc.org/legacy/update.php?resource=" + this.resourceId).openStream(); Scanner scanner = new Scanner(inputStream)) {
+            try (InputStream inputStream = URI.create("https://api.spigotmc.org/legacy/update.php?resource=" + this.resourceId).toURL().openStream(); Scanner scanner = new Scanner(inputStream)) {
                 if (scanner.hasNext()) {
                     consumer.accept(scanner.next());
                 }
